<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    android:padding="24dp">

    <!-- Title -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleChangePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/etCurrentPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Current Password -->
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etCurrentPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/enter_current_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="@drawable/rounded_bg_edt"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary"
        app:layout_constraintTop_toBottomOf="@id/titleChangePassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp" />

    <!-- New Password -->
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etNewPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="@drawable/rounded_bg_edt"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary"
        app:layout_constraintTop_toBottomOf="@id/etCurrentPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp" />

    <!-- Re-enter New Password -->
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/etReenterNewPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/reenter_new_password"
        android:inputType="textPassword"
        android:padding="12dp"
        android:background="@drawable/rounded_bg_edt"
        android:textColor="@color/text_primary"
        android:textColorHint="@color/text_secondary"
        app:layout_constraintTop_toBottomOf="@id/etNewPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"/>

    <!-- Forgot Password -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:paddingTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/etReenterNewPassword"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Confirm Button -->
    <Button
        android:id="@+id/btnConfirm"
        style="@style/PositiveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:paddingVertical="15dp"
        app:layout_constraintTop_toBottomOf="@id/forgotPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
