<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_action_bar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/ab_title"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/concentrate_mode_setup_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/btn_back"
            style="@style/ButtonActionBar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Duration Picker (e.g., Spinner) -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/durationLabel"
        style="@style/TextStyle"
        android:text="@string/select_duration"
        android:paddingBottom="8dp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layout_action_bar"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputDuration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/durationLabel"
        app:endIconMode="dropdown_menu">

        <com.google.android.material.textfield.MaterialAutoCompleteTextView
            android:id="@+id/autoCompleteTxtDuration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/duration"
            android:padding="5dp"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvGoalLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtInputDuration"
        style="@style/TextStyle"
        android:text="@string/do_you_have_any_goal"
        android:layout_marginTop="10dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtGoal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_focus_goal"
        android:layout_marginTop="10dp"
        android:inputType="textMultiLine"
        android:maxLines="2"
        android:maxLength="80"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvGoalLabel"/>

    <Button
        android:id="@+id/buttonSelectSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_sound"
        style="@style/button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edtGoal"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSelectedSound"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/silence"
        android:textColor="?android:textColorSecondary"
        android:textSize="16sp"
        android:maxLines="1"
        android:ellipsize="end"
        android:textAlignment="textStart"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toEndOf="@id/buttonSelectSound"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/buttonSelectSound"
        app:layout_constraintBottom_toBottomOf="@id/buttonSelectSound"/>

    <Button
        android:id="@+id/startConcentrateButton"
        style="@style/positiveButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/adView"
        android:text="@string/go_concentrate_mode"
        android:layout_marginBottom="20dp" />

    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:visibility="gone"
        tools:visibility="visible"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
