<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/dialog_background"
    android:elevation="10dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="User Name"
        android:textSize="16sp"
        android:textStyle="bold"
        android:padding="10dp"
        android:maxLines="1"
        android:ellipsize="end"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_user" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_subscription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/subscription"
        android:textSize="16sp"
        android:padding="10dp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_subscription" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:textSize="16sp"
        android:padding="10dp"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_about" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textSize="16sp"
        android:padding="10dp"
        android:drawablePadding="10dp"
        android:textColor="@android:color/holo_red_dark"
        android:drawableStart="@drawable/ic_logout" />

</LinearLayout>